--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,4 +1,15 @@
 /* 
     Put your custom SCSS here! 
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&family=Uncial+Antiqua&display=swap');
+body {
+  font-family: "IM Fell French Canon", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6 {
+    font-family: "Uncial Antiqua", system-ui;
+  font-weight: 450;
+  font-style: normal;
+}
 */
