--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -3,7 +3,8 @@
     This allows you to override any CollectionBuilder or Bootstrap CSS without modifying the base theme files directly.
 */
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&family=Uncial+Antiqua&display=swap');
-  font-family: "IM Fell French Canon", serif;
+body {
+    font-family: "IM Fell French Canon", serif;
   font-weight: 400;
   font-style: normal;
 }
