--- a/_sass/_theme-colors.scss
+++ b/_sass/_theme-colors.scss
@@ -6,7 +6,7 @@
 
 /* variables needed from Bootstrap */ 
 
-$white:    #fff !default;
+$white:    #F0DEBA;
 $black:    #000 !default;
 $primary:       #CB9500 !default;
 
