--- a/_sass/_theme-colors.scss
+++ b/_sass/_theme-colors.scss
@@ -150,8 +150,8 @@ $_luminance-list: .0008 .001 .0011 .0013 .0015 .0017 .002 .0022 .0025 .0027 .003
         $active-color: color-contrast($active-background)
     ) {
 
-    color: #F0DEBA
-    background-color: $background;
+    color: $color;
+    background-color: $background;#F0DEBA
     border-color: $border;
 
     &:hover {
