--- a/_sass/_theme-colors.scss
+++ b/_sass/_theme-colors.scss
@@ -151,7 +151,7 @@ $_luminance-list: .0008 .001 .0011 .0013 .0015 .0017 .002 .0022 .0025 .0027 .003
     ) {
 
     color: $color;
-    background-color: $F0DEBA;
+    background-color: $background;
     border-color: $border;
 
     &:hover {
